--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     }
     , "devDependencies": {
           "mocha"                   : "1.17.x"
+        , "ee-orm"                  : "0.3.x"
+        , "ee-async"                : "^0.2.10"
+        , "ee-project"              : "^0.2.4"
     }
     , "optionalDependencies": {}
     , "keywords"                    : []
     , "scripts": {
-        "test"                      : "./node_modules/mocha/bin/mocha --reporter spec"
+        "test"                      : "./node_modules/mocha/bin/mocha --reporter spec --bail"
     }
 }
