--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name"                        : "ee-orm-timestamps"
     , "description"                 : "Timestamps / soft-delete extension for the ee-orm package"
-    , "version"                     : "0.1.0"
+    , "version"                     : "0.2.0"
     , "homepage"                    : "https://github.com/eventEmitter/ee-orm-timestamps"
     , "author"                      : "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
     , "licence"                     : "mit"
@@ -24,7 +24,7 @@
     }
     , "devDependencies": {
           "mocha"                   : "1.17.x"
-        , "ee-orm"                  : "0.4.x"
+        , "ee-orm"                  : "^0.4.1"
         , "ee-async"                : "^0.2.10"
         , "ee-project"              : "^0.2.4"
     }
