--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name"                        : "ee-orm-timestamps"
     , "description"                 : "Timestamps / soft-delete extension for the ee-orm package"
-    , "version"                     : "0.2.1"
+    , "version"                     : "0.2.2"
     , "homepage"                    : "https://github.com/eventEmitter/ee-orm-timestamps"
     , "author"                      : "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
     , "licence"                     : "mit"
@@ -20,16 +20,16 @@
         , "ee-event-emitter"        : "0.1.x"
         , "ee-types"                : "0.1.x"
         , "ee-log"                  : "0.2.x"
-        , "ee-orm-extension"        : "^0.1.0"
+        , "ee-orm-extension"        : "^0.1.7"
     }
     , "devDependencies": {
           "mocha"                   : "1.17.x"
-        , "ee-orm"                  : "^0.4.1"
+        , "ee-orm"                  : "^0.4.6"
         , "ee-async"                : "^0.2.10"
         , "ee-project"              : "^0.2.4"
     }
     , "optionalDependencies": {}
-    , "keywords"                    : []
+    , "keywords"                    : ["ee", "orm", "extension", "timestamps", "soft-delete"]
     , "scripts": {
         "test"                      : "./node_modules/mocha/bin/mocha --reporter spec --bail"
     }
