--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
       "name"                        : "ee-orm-timestamps"
     , "description"                 : "Timestamps / soft-delete extension for the ee-orm package"
-    , "version"                     : "0.2.7"
+    , "version"                     : "0.3.0"
     , "homepage"                    : "https://github.com/eventEmitter/ee-orm-timestamps"
     , "author"                      : "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
     , "licence"                     : "mit"
@@ -24,9 +24,13 @@
     }
     , "devDependencies": {
           "mocha"                   : "1.17.x"
-        , "ee-orm"                  : "0.6.X"
+        , "ee-orm"                  : "^0.15.X"
         , "ee-async"                : "0.2.10"
         , "ee-project"              : "0.2.4"
+        , "es6-promise"             : "2.0.x"
+    }
+    , "peerDependencies": {
+          "ee-orm"                  : "^0.15.x"
     }
     , "optionalDependencies": {}
     , "keywords"                    : ["ee", "orm", "extension", "timestamps", "soft-delete"]
