--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-      "name"                        : "ee-orm-timestamps"
-    , "description"                 : "Timestamps / soft-delete extension for the ee-orm package"
-    , "version"                     : "0.3.1"
-    , "homepage"                    : "https://github.com/eventEmitter/ee-orm-timestamps"
-    , "author"                      : "Michael van der Weg <michael@eventemitter.com> (http://eventemitter.com/)" 
+      "name"                        : "related-timestamps"
+    , "description"                 : "Timestamps / soft-delete extension for the related package"
+    , "version"                     : "0.4.0"
+    , "homepage"                    : "https://github.com/eventEmitter/related-timestamps"
+    , "author"                      : "Michael van der Weg <michael@joinbox.com> (http://joinbox.com/)" 
     , "licence"                     : "mit"
     , "repository": {
-          "url"                     : "https://github.com/eventEmitter/ee-orm-timestamps.git"
+          "url"                     : "https://github.com/eventEmitter/relatedtimestamps.git"
         , "type"                    : "git"
     }
     , "engines": {
         "node"                      : ">=v0.10.17"
     }
     , "bugs": {
-        "url"                       : "https://github.com/eventEmitter/ee-orm-timestamps/issues"
+        "url"                       : "https://github.com/eventEmitter/related-timestamps/issues"
     }
     , "dependencies": {
           "ee-class"                : "1.0.x"
         , "ee-event-emitter"        : "0.1.x"
         , "ee-types"                : "0.1.x"
         , "ee-log"                  : "0.2.x"
-        , "ee-orm-extension"        : "^0.1.7"
+        , "related-extension"       : "0.4.x"
     }
     , "devDependencies": {
           "mocha"                   : "1.17.x"
-        , "ee-orm"                  : "^0.x.x"
+        , "related"                 : "x.x.x"
         , "ee-async"                : "0.2.10"
         , "ee-project"              : "0.2.4"
         , "es6-promise"             : "2.0.x"
     }
     , "peerDependencies": {
-          "ee-orm"                  : "^0.x.x"
+          "related"                 : "x.x.x"
     }
     , "optionalDependencies": {}
-    , "keywords"                    : ["ee", "orm", "extension", "timestamps", "soft-delete"]
+    , "keywords"                    : ["related", "orm", "extension", "timestamps", "soft-delete"]
     , "scripts": {
         "test"                      : "./node_modules/mocha/bin/mocha --reporter spec --bail"
     }
